<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HackTabApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="userNameHint">Enter User Name</string>
    <string name="passwordHint">Enter 6 digit password</string>
    <string name="signIn">Sign In</string>
    <string name="title_activity_login_success">LoginSuccess</string>
    <string name="invalid">Invalid User Id/Password</string>
    <string name="emailAddHint">Enter Email Address</string>
    <string name="phoneNumHint">Enter Phone Number</string>
</resources>
